--- a/Avian Armageddon/Avian Armageddon.vcxproj
+++ b/Avian Armageddon/Avian Armageddon.vcxproj
@@ -72,22 +72,22 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\Users\black\Desktop\School\CPSC 4160\Avian Armageddon\Avian Armageddon\include;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Dev\vcpkg\installed\x64-windows\include\SDL2;C:\Users\black\Desktop\School\CPSC 4160\Avian Armageddon\Avian Armageddon\include;$(IncludePath)</IncludePath>
     <LibraryPath>C:\Dev\vcpkg\installed\x64-windows\lib\manual-link;C:\Dev\vcpkg\installed\x64-windows\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\Users\black\Desktop\School\CPSC 4160\Avian Armageddon\Avian Armageddon\include;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Dev\vcpkg\installed\x64-windows\include\SDL2;C:\Users\black\Desktop\School\CPSC 4160\Avian Armageddon\Avian Armageddon\include;$(IncludePath)</IncludePath>
     <LibraryPath>C:\Dev\vcpkg\installed\x64-windows\lib\manual-link;C:\Dev\vcpkg\installed\x64-windows\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\Users\black\Desktop\School\CPSC 4160\Avian Armageddon\Avian Armageddon\include;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Dev\vcpkg\installed\x64-windows\include\SDL2;C:\Users\black\Desktop\School\CPSC 4160\Avian Armageddon\Avian Armageddon\include;$(IncludePath)</IncludePath>
     <LibraryPath>C:\Dev\vcpkg\installed\x64-windows\lib\manual-link;C:\Dev\vcpkg\installed\x64-windows\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\Users\black\Desktop\School\CPSC 4160\Avian Armageddon\Avian Armageddon\include;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Dev\vcpkg\installed\x64-windows\include\SDL2;C:\Users\black\Desktop\School\CPSC 4160\Avian Armageddon\Avian Armageddon\include;$(IncludePath)</IncludePath>
     <LibraryPath>C:\Dev\vcpkg\installed\x64-windows\lib\manual-link;C:\Dev\vcpkg\installed\x64-windows\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -100,6 +100,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>C:\Dev\vcpkg\installed\x64-windows\lib\manual-link;C:\Dev\vcpkg\installed\x64-windows\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -116,6 +117,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>C:\Dev\vcpkg\installed\x64-windows\lib\manual-link;C:\Dev\vcpkg\installed\x64-windows\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -124,10 +126,12 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <DisableSpecificWarnings>26812;%(DisableSpecificWarnings)</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>C:\Dev\vcpkg\installed\x64-windows\lib\manual-link;C:\Dev\vcpkg\installed\x64-windows\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -138,28 +142,38 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <DisableSpecificWarnings>26495;26812;4244</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>C:\Dev\vcpkg\installed\x64-windows\lib\manual-link;C:\Dev\vcpkg\installed\x64-windows\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="include\Bullet.h" />
     <ClInclude Include="include\Collectible.h" />
     <ClInclude Include="include\Collider.h" />
+    <ClInclude Include="include\CollisionData.h" />
+    <ClInclude Include="include\EntityType.h" />
+    <ClInclude Include="include\GameBackground.h" />
     <ClInclude Include="include\GameEngine.h" />
     <ClInclude Include="include\GameObject.h" />
     <ClInclude Include="include\Graphics.h" />
+    <ClInclude Include="include\Gun.h" />
     <ClInclude Include="include\Level.h" />
     <ClInclude Include="include\Particle.h" />
     <ClInclude Include="include\ParticleEmitter.h" />
     <ClInclude Include="include\Player.h" />
     <ClInclude Include="include\Sprite.h" />
+    <ClInclude Include="include\Text.h" />
     <ClInclude Include="include\Tile.h" />
     <ClInclude Include="include\Tilemap.h" />
+    <ClInclude Include="include\tinyxml2.h" />
     <ClInclude Include="include\Vector2D.h" />
+    <ClInclude Include="include\GunStats.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Sprites\Particle_Default.png" />
@@ -169,20 +183,30 @@
     <Image Include="Sprites\TestTilemap.png" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Bullet.cpp" />
     <ClCompile Include="src\Collectible.cpp" />
     <ClCompile Include="src\Collider.cpp" />
+    <ClCompile Include="src\CollisionData.cpp" />
+    <ClCompile Include="src\GameBackground.cpp" />
     <ClCompile Include="src\GameEngine.cpp" />
     <ClCompile Include="src\GameObject.cpp" />
     <ClCompile Include="src\Graphics.cpp" />
+    <ClCompile Include="src\Gun.cpp" />
+    <ClCompile Include="src\GunStats.cpp" />
     <ClCompile Include="src\Level.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Particle.cpp" />
     <ClCompile Include="src\ParticleEmitter.cpp" />
     <ClCompile Include="src\Player.cpp" />
     <ClCompile Include="src\Sprite.cpp" />
+    <ClCompile Include="src\Text.cpp" />
     <ClCompile Include="src\Tile.cpp" />
     <ClCompile Include="src\Tilemap.cpp" />
+    <ClCompile Include="src\tinyxml2.cpp" />
     <ClCompile Include="src\Vector2D.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Font Include="Fonts\LcdSolid.ttf" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
