--- a/Avian Armageddon/Avian Armageddon.vcxproj.filters
+++ b/Avian Armageddon/Avian Armageddon.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClInclude Include="include\GameHud.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\SoundManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="Sprites\Particle_Default.png">
@@ -194,6 +197,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\GameHud.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\SoundManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
